[package]
name = "protosol"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
prost = "0.10"
prost-types = "0.10"
solana-bpf-loader-program = "1.18.2"
solana-program-runtime = "1.18.2"
solana-sdk = "1.18.2"
thiserror = "1.0.57"

[dev-dependencies]
test-program = { path = "./test-program" }

[build-dependencies]
prost-build = "0.10"
