[package]
name = "protosol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3.3"
prost = "0.10"
prost-types = "0.10"
solana-address-lookup-table-program = "1.18.2"
solana-bpf-loader-program = "1.18.2"
solana-compute-budget-program = "1.18.2"
solana-config-program = "1.18.2"
solana-loader-v4-program = "1.18.2"
solana-program-runtime = "1.18.2"
solana-sdk = "1.18.2"
solana-stake-program = "1.18.2"
solana-system-program = "1.18.2"
solana-vote-program = "1.18.2"
solana-zk-token-proof-program = "1.18.2"
solana-zk-token-sdk = "1.18.2"
thiserror = "1.0.57"

[build-dependencies]
prost-build = "0.10"
